# spiderwick-chronicles-re

./: .gitignore  LICENSE  README.md
docs/: APPROACH.md  DIAGNOSTIC_TOOLS.md  IDA_MCP_SETUP.md  NM40_FORMAT.md  NM40_TEXTURE_PIPELINE.md  SESSION_LOG.md  STRINGS_GUIDE.md
engine/: CONFIG_TXT_KEYS.md  RE_INDEX.md
engine/camera/: ARCHITECTURE.md  CAMERA_RENDERING.md  FREECAM_PLAN.md  MONOCLE_INVESTIGATION.md  PORTAL_SYSTEM.md  ROOM_CLIPPING.md  WORLD_TO_SCREEN.md
engine/camera/structs/: camera_settings.md  camera_struct.md  overlay_flag.md  position_accessors.md
engine/camera/subs/: sub_4353C0_CameraSettings__InitDefaults.md  sub_4356F0_PositionWriter.md  sub_436190_CameraPipeline.md  sub_4368B0_GetCameraObject.md  sub_4391D0_SectorTransition.md  sub_439410_CameraTick.md  sub_439AF0_CameraMatrixBuilder.md  sub_43DA50_CameraModeHandler.md  sub_43E2B0_MainCameraComponent.md  sub_487C70_ClPlayerProximityService_Init.md  sub_488DD0_CameraSectorUpdate.md  sub_48CBE0_PortalTraversalPath2.md  sub_490580_PortalTraversalPath3.md  sub_4E1680_SetAspectRatioMode.md  sub_50B760_SetProjection.md  sub_51B2A0_SetTransform.md  sub_5293D0_CameraRender__SetFovAndClip.md  sub_5299A0_ViewMatrixWrapper.md  sub_5299E0_ClipPortalPolygon.md  sub_52A090_CameraRender__SetNearClip.md  sub_52A0F0_CameraRender__SetFarClip.md  sub_52A150_CameraRender_WorldToScreen.md  sub_52A1A0_CameraRender__ResetToDefaults.md  sub_5A7DC0_Memcpy16Floats.md  sub_5A8B20_Frustum__BuildProjectionMatrix.md  sub_5AA1B0_BuildViewMatrix.md  sub_5AABD0_Frustum__BuildCorners.md
engine/data/: DATA_STORE.md  GAME_SETTINGS_SYSTEM.md
engine/data/subs/: sub_41E830_HashLookup.md  sub_5392C0_GetValuePtr.md  sub_539630_BinarySearchByHash.md
engine/debug/: CHEAT_SYSTEM.md  DEBUG_CAMERA.md  DEV_CONFIG.md  ENGINE_DEBUG_SYSTEMS.md
engine/debug/subs/: sub_443160_CheckCheatFlag.md  (+11 more)
engine/events/: EVENT_SYSTEM.md
engine/fade/: FADE_SYSTEM.md
engine/formats/: ASSET_LOADING.md  DBDB_FORMAT.md  PCW_FORMAT.md  SCT_FORMAT.md  SKELETON_FORMAT.md  WF_FORMAT.md  WORLD_GEOMETRY.md  ZWD_FORMAT.md
engine/objects/: CHARACTER_CREATION.md  CHARACTER_SWITCHING.md  CHARACTER_SYSTEM.md  ClCharacterObj_layout.md  ENTITY_SPAWNING.md  HOT_SWITCH_SYSTEM.md  PLAYER_SLOT_SYSTEM.md
engine/player/: player_struct.md
engine/rendering/: NM40_RENDER_PIPELINE.md
engine/sectors/: SECTOR_LOADING.md
engine/services/: SERVICE_REGISTRY.md
engine/time/: CLOCK_SYSTEM.md
engine/vm/: KALLIS_VM.md  SCRIPT_DEBUGGER.md  VM_BYTECODE_FORMAT.md  VM_FUNCTION_REGISTRATION.md  VM_FUNCTION_TABLE.md  VM_INTERPRETER.md  VM_OBJECT_SYSTEM.md  VM_ROP_DISPATCHERS.md  VM_STACK_SYSTEM.md
engine/world/: SECTOR_CULLING.md  WORLD_GEOMETRY_INSTANCES.md  WORLD_LOADING.md
mods/debug/: debugcam_activate.lua  debugcam_create.cea  debugcam_input.lua  debugcam_pipeline.cea  dump_sectors.lua  dump_sectors_full.lua  portal_allsectors_test.cea  portal_allsectors_v5.cea  portal_bypass.cea  portal_frustum_bypass.cea  portal_noclear_test.cea  portal_nop_test.cea  portal_widefov2_test.cea  portal_widefov_fixedsector.cea  portal_widefov_freezesector.cea  portal_widefov_test.cea
mods/freecam/: charswitch_CT_entry.cea  freecam_CT_entry.cea  freecam_core.cea  freecam_render_all.cea  freecam_sector_aabb.cea  nocull_farplane.lua  nocull_farplane_CT_entry.cea  pCamStruct_CT_entry.cea  pPlayerAddy_CT_entry.cea  pPlayer_CT_entry.cea
mods/spidermod/: CMakeLists.txt  README.md  deploy.bat
mods/spidermod/docs/: 3D_DEBUG_OVERLAY.md  CAMERA_OVERRIDE.md  ENTITY_SPAWNING_MOD.md  HOT_SWITCH.md
mods/spidermod/src/: addresses.h  d3d_hook.cpp  d3d_hook.h  dinput8_proxy.cpp  dllmain.cpp  freecam.cpp  freecam.h  log.h  memory.h  menu.cpp  menu.h  menu_characters.cpp  menu_common.cpp  menu_common.h  menu_debug.cpp  menu_engine.cpp  registry_redirect.cpp  registry_redirect.h  sector.cpp  sector.h
reference/: strings_full.txt
release/SpiderwickRE-v1.1/: README.txt
tools/: fmt_spiderwick_pcwb.py  match_prop_transforms.py  match_toc.py  sct_disasm.py  search_hashes.py  spiderwick_glb.py  spiderwick_unpack.py  spiderwick_world_export.py
tools/analysis/: analyze_formats.py  apply_renames.py  asset_names.py  awad_neighbors.py  awad_texture_analysis.py  build_asset_names_final.py  nm40_dump.py  pcim_header_dump.py  pcwb_analyze3.py  pcwb_clustering.py  pcwb_header_dump.py  pcwb_layers.py  pcwb_props.py  pcwb_tex_verify.py
tools/ce_scripts/: find_caller.lua  find_cam_obj.lua  find_yaw.lua  monocle_dump.lua  sector_monitor.lua  sector_write_monitor.lua  wheel_scan.lua
tools/legacy/: spiderwick_world_glb.py  spiderwick_world_obj.py
tools/spiderview/: CMakeLists.txt  SPIDERVIEW_DOCS.md  SPIDERVIEW_V2_PLAN.md
tools/spiderview/data/: ida_capture_texmap.py  nm40_texmap_auto.json
tools/spiderview/src/: app.cpp  app.h  formats.cpp  formats.h  main.cpp  scene.cpp  scene.h  vm.cpp  vm.h
tools/spiderview/src/core/: asset_cache.cpp  asset_cache.h  asset_types.h  format_handlers.cpp  format_registry.h  game_fs.cpp  game_fs.h
tools/spiderview/src/export/: fbx_writer.cpp  fbx_writer.h  obj_writer.cpp  obj_writer.h
tools/spiderview/src/scene/: camera.cpp  camera.h  world_shader.cpp  world_shader.h
tools/spiderview/src/ui/: hex_viewer.cpp  hex_viewer.h  panels.cpp  panels.h
(+126 files in other folders)
